new: 2 num buttons and sum operator.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
     <body>
         <div class="buttons" id="buttons">
             <input type="button" id="addition" value="+">
-            <input type="button" id="one" value="1">
-            <input type="button" id="two" value="2">
+            <br>
+        <n class="numbers" id="numbers">
+            <button id="one">1</button>
+            <button id="two">2</button>
+        </n>
+
         </div>
         <div id="numbers">
             
@@ -18,6 +22,7 @@
     </body>
 
     <script src="app.js"></script>
+    <script src="Learning/functions.js"></script>
 
 
 
