new: 2 num buttons and sum operator.

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <body>
         <div class="buttons" id="buttons">
             <input type="button" id="addition" value="+">
-            <br>
-        <n class="numbers" id="numbers">
-            <button id="one">1</button>
-            <button id="two">2</button>
-        </n>
+            
+        <div class="numbers" id="numbers">
+            <button id="one" >1</button>
+            <button id="two" type="submit" value="2">2</button>
+        </div>
 
         </div>
         <div id="numbers">
