add: result div.

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
             <input type="button" id="addition" value="+">
             
         <div class="numbers" id="numbers">
-            <button id="one" >1</button>
-            <button id="two" type="submit" value="2">2</button>
+            <button id="one">1</button>
+            <button id="two">2</button>
         </div>
 
         </div>
-        <div id="numbers">
+        <div id="result">
             
         </div>
     </body>
