--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <body>
         <div class="buttons" id="buttons">
             <input type="button" id="addition" value="+">
+            <input type="button" id="equals" value="=">
             
         <div class="numbers" id="numbers">
             <button id="one">1</button>
