edit: first draft

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head id="head">
         <title>Caluculator App</title>
         <link rel="stylesheet" href="styles.css"/>
     </head>
@@ -20,14 +20,18 @@
             <button id="zeros">0</button>
         </div>
         <br>
-        <div class="buttons" id="buttons">
+        <div class="operators" id="buttons">
             <input type="button" id="addition" value="+">
-            <input type="button" id="subtraction" vallue="A">
+            <input type="button" id="subtraction" vallue="-">
             <input type="button" id="multiplication" value="x">
             <input type="button" id="division" value="/">
             <input type="button" id="equals" value="=">
-            
-            <input type="button" id="memory-clear" value="MC">
+        </div>
+        <br>
+        <div class="memory-buttons" id="buttons">
+        <input type="button" id="memory-clear" value="MC">
+        <input type="button" id="memory-add" value="M+">
+        <input type="button" id="memory-recall" value="MR">
         </div>
         <br>
         </div>
