edit: first draft

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <input type="button" id="memory-recall" value="MR">
         </div>
         <br>
-        </div>
-        <div id="result"> 
+        </div >
+        <div class="result" id="result"> 
         </div>
        <!-- <hr>
         <div id="testone">
