--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
             <button id="three">3</button>
             <button id="three">4</button>
             <button id="three">5</button>
+            <button id="six">6</button>
+            <button id="seven">7</button>
+            <button id="eight">8</button>
+            <button id="nine">9</button>
+            <button id="zeros">0</button>
+            <button id="decimal">.</button>
         </div>
         <div class="operators" id="operators">
             <button type="button" id="addition" value="+"></button>
