--- a/test.html
+++ b/test.html
@@ -13,7 +13,7 @@
 </div>
 <div class="operators" id="buttons">
     <input type="button" id="addition" value="+">
-    <input type="button" id="subtraction" vallue="-">
+    <input type="button" id="subtraction" value="-">
     <input type="button" id="multiplication" value="x">
     <input type="button" id="division" value="/">
     <input type="button" id="equals" value="=">
