--- a/index.html
+++ b/index.html
@@ -4,37 +4,13 @@
         <title>Caluculator App</title>
         <link rel="stylesheet" href="index.css"/>  
 <body>
-    <div class="container-root">
-        <div class="container-calculator">
-            <div class="container-numbers" id="numbers">
-                <button class="number">7</button>
-                <button class="number">8</button>
-                <button class="number">9</button>
-                <button class="number">4</button>
-                <button class="number">5</button>
-                <button class="number">6</button>
-                <button class="number">1</button>
-                <button class="number">2</button>
-                <button class="number">3</button>
-                <button class="number">0</button>
-            </div>
-            <div class="container-operators">
-                <button class="operator" id="addition" value="+">+</button>
-                <button class="operator" id="subtraction" value="-">-</button>
-                <button class="operator" id="multiplication" value="x">*</button>
-                <button class="operator" id="division" value="/">/</button>
-                <button class="operator" id="equals" value="=">=</button>
-            </div>
-            
-            <div class="container-memory">
-                <button class="memory" id="memory-save">M+</button>
-                <button class="memory" id="memory-recall">MR</button>
-                <button class="memory" id="memory-clear">MC</button>
-            </div>
-            <input type="text" class="result" id="result" value="0" readonly></div>
-        </div>
-    </div>
+
+    <button id="button-one">Button One</button>
+    <button id="button-two">Button Two</button>
+    <button id="button-three">Button Three</button>
+    
+
     </body>
-   <script src="app.js"></script>
+  <script src="app.js"></script>
 
 </html>
