--- a/index.html
+++ b/index.html
@@ -1,16 +1,38 @@
 <!DOCTYPE html>
 <html>
-    <head id="head">
-        <title>Caluculator App</title>
-        <link rel="stylesheet" href="index.css"/>  
-<body>
-
-    <button id="button-one">Button One</button>
-    <button id="button-two">Button Two</button>
-    <button id="button-three">Button Three</button>
     
+    <head id="head">
+    <title></title>
+    <body>
+<div class="numbers " id="numbers">
+    <button id="one">1</button>
+    <button id="two">2</button>
+    <button id="three">3</button>
+    <button id="four">4</button>
+    <button id="five">5</button>
+    <button id="six">6</button>
+    <button id="seven">7</button>
+    <button id="eight">8</button>
+    <button id="nine">9</button>
+    <button id="zero">0</button>
+    <button id="decimal">.</button>
+</div>
+<div class="operators" id="buttons">
+    <input type="button" id="addition" value="+">
+    <input type="button" id="subtraction" value="-">
+    <input type="button" id="multiplication" value="x">
+    <input type="button" id="division" value="/">
+    <input type="button" id="equals" value="=">
+</div>
 
-    </body>
-  <script src="app.js"></script>
-
+<div class="memory-buttons" id="buttons">
+<input type="button" id="memory-clear" value="MC">
+<input type="button" id="memory-add" value="M+">
+<input type="button" id="memory-recall" value="MR">
+</div>
+<div 
+class="result" id="result">
+</div>
+</body>
+<script src="objects.js"></script>
 </html>
