--- a/test.html
+++ b/test.html
@@ -1,3 +1,8 @@
+<!DOCTYPE html>
+<html>
+    <head id="head">
+    <title></title>
+    <body>
 <div class="numbers " id="numbers">
     <button id="one">1</button>
     <button id="two">2</button>
@@ -8,7 +13,7 @@
     <button id="seven">7</button>
     <button id="eight">8</button>
     <button id="nine">9</button>
-    <button id="zeros">0</button>
+    <button id="zero">0</button>
     <button id="decimal">.</button>
 </div>
 <div class="operators" id="buttons">
@@ -27,7 +32,9 @@
 <div 
 class="result" id="result">
 </div>
-
+</body>
+<script src="app.js"></script>
+</html>
   <!-- <hr>
         <div id="testone">
             <button id="addlistener">Call Listener</button>
