--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 <div 
 class="result" id="result">
 </div>
+<div id="test-one"></div>
+<div id="test-two"></div>
 </body>
 <script src="objects.js"></script>
 </html>
