--- a/index.html
+++ b/index.html
@@ -1,40 +1,40 @@
 <!DOCTYPE html>
 <html>
-    
+    <link ref="stylesheet" href="index.css">
     <head id="head">
     <title></title>
-    <body>
-<div class="numbers " id="numbers">
-    <button id="one">1</button>
-    <button id="two">2</button>
-    <button id="three">3</button>
-    <button id="four">4</button>
-    <button id="five">5</button>
-    <button id="six">6</button>
-    <button id="seven">7</button>
-    <button id="eight">8</button>
-    <button id="nine">9</button>
-    <button id="zero">0</button>
-    <button id="decimal">.</button>
-</div>
-<div class="operators" id="buttons">
-    <input type="button" id="addition" value="+">
-    <input type="button" id="subtraction" value="-">
-    <input type="button" id="multiplication" value="x">
-    <input type="button" id="division" value="/">
-    <input type="button" id="equals" value="=">
-</div>
+<body>
+    <div class="numbers " id="numbers">
+        <button id="one">1</button>
+        <button id="two">2</button>
+        <button id="three">3</button>
+        <button id="four">4</button>
+        <button id="five">5</button>
+        <button id="six">6</button>
+        <button id="seven">7</button>
+        <button id="eight">8</button>
+        <button id="nine">9</button>
+        <button id="zero">0</button>
+        <button id="decimal">.</button>
+    </div>
+    <div class="operators" id="buttons">
+        <input type="button" id="addition" value="+">
+        <input type="button" id="subtraction" value="-">
+        <input type="button" id="multiplication" value="x">
+        <input type="button" id="division" value="/">
+        <input type="button" id="equals" value="=">
+    </div>
 
-<div class="memory-buttons" id="buttons">
-<input type="button" id="memory-clear" value="MC">
-<input type="button" id="memory-add" value="M+">
-<input type="button" id="memory-recall" value="MR">
-</div>
-<div 
-class="result" id="result">
-</div>
-<div id="test-one"></div>
-<div id="test-two"></div>
+    <div class="memory-buttons" id="buttons">
+    <input type="button" id="memory-clear" value="MC">
+    <input type="button" id="memory-add" value="M+">
+    <input type="button" id="memory-recall" value="MR">
+    </div>
+    <div 
+    class="result" id="result">
+    </div>
+    <div id="test-one"></div>
+    <div id="test-two"></div>
 </body>
 <script src="objects.js"></script>
 </html>
