add: two operands; operators; storage in js object

--- a/index.html
+++ b/index.html
@@ -1,38 +1,35 @@
 <!DOCTYPE html>
 <html>
-    <link ref="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css"/>
     <head id="head">
     <title></title>
 <body>
     <div class="numbers " id="numbers">
-        <button id="one">1</button>
-        <button id="two">2</button>
-        <button id="three">3</button>
-        <button id="four">4</button>
-        <button id="five">5</button>
-        <button id="six">6</button>
-        <button id="seven">7</button>
-        <button id="eight">8</button>
-        <button id="nine">9</button>
-        <button id="zero">0</button>
-        <button id="decimal">.</button>
+        <button class="number" id="one">1</button>
+        <button class="number" id="two">2</button>
+        <button class="number" id="three">3</button>
+        <button class="number" id="four">4</button>
+        <button class="number" id="five">5</button>
+        <button class="number" id="six">6</button>
+        <button class="number" id="seven">7</button>
+        <button class="number" id="eight">8</button>
+        <button class="number" id="nine">9</button>
+        <button class="number" id="zero">0</button>
+        <button class="number" id="decimal">.</button>
     </div>
     <div class="operators" id="buttons">
-        <input type="button" id="addition" value="+">
-        <input type="button" id="subtraction" value="-">
-        <input type="button" id="multiplication" value="x">
-        <input type="button" id="division" value="/">
-        <input type="button" id="equals" value="=">
+        <button class="operator" id="addition" value="+">+</input>
+        <button class="operator" id="subtraction" value="-">-</input>
+        <button class="operator" id="multiplication">*</input>
+        <button class="operator" id="division">/</input>
     </div>
 
     <div class="memory-buttons" id="buttons">
-    <input type="button" id="memory-clear" value="MC">
-    <input type="button" id="memory-add" value="M+">
-    <input type="button" id="memory-recall" value="MR">
+    <input type="button" id="memory-clear" value="MC"></input>
+    <input type="button" id="memory-add" value="M+"></input>
+    <input type="button" id="memory-recall" value="MR"></input>
     </div>
-    <div 
-    class="result" id="result">
-    </div>
+    <div class="result" id="result"><input type="button" id="equals" value="="></inputs></div>
     <div id="test-one"></div>
     <div id="test-two"></div>
 </body>
