edit: new approach

--- a/index.html
+++ b/index.html
@@ -33,5 +33,5 @@
     <div id="test-one"></div>
     <div id="test-two"></div>
 </body>
-<script src="objects.js"></script>
+<script src="new-attempt.js"></script>
 </html>
