--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
     <link rel="stylesheet" href="index.css"/>
     <head id="head">
     <title></title>
+
 <body>
-    <div class="numbers " id="numbers">
+    <div class="container-root">
+        <div class="container-calculator">
+            <div class="result" id="result">0</div>
+    <div class="container-numbers" id="numbers">
         <button class="number" id="one">1</button>
         <button class="number" id="two">2</button>
         <button class="number" id="three">3</button>
@@ -17,21 +21,26 @@
         <button class="number" id="zero">0</button>
         <button class="number" id="decimal">.</button>
     </div>
-    <div class="operators" id="buttons">
+    <div class="container-operators" id="buttons">
         <button class="operator" id="addition" value="+">+</input>
         <button class="operator" id="subtraction" value="-">-</input>
-        <button class="operator" id="multiplication">*</input>
-        <button class="operator" id="division">/</input>
+        <button class="operator" id="multiplication" value="*">*</input>
+        <button class="operator" id="division" value="/">/</input>
+        <button class="equals" id="equals">=</input>
     </div>
 
-    <div class="memory-buttons" id="buttons">
-    <input type="button" id="memory-clear" value="MC"></input>
-    <input type="button" id="memory-add" value="M+"></input>
-    <input type="button" id="memory-recall" value="MR"></input>
+    <div class="container-memory" id="buttons">
+    <input type="button" class="memory" id="memory-clear" value="MC"></input>
+    <input type="button" class="memory" id="memory-add" value="M+"></input>
+    <input type="button" class="memory" id="memory-recall" value="MR"></input>
+    
     </div>
-    <div class="result" id="result"><input type="button" id="equals" value="="></inputs></div>
+    
+    <hr>
     <div id="test-one"></div>
     <div id="test-two"></div>
+</div>
+</div>
 </body>
-<script src="new-attempt.js"></script>
+<script src="app.js"></script>
 </html>
