ready for review

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <div class="container-root">
         <div class="container-calculator">
-            <div class="result" id="result">0</div>
+            <div class="result" id="result" readonly>0</div>
     <div class="container-numbers" id="numbers">
         <button class="number" id="one">1</button>
         <button class="number" id="two">2</button>
@@ -33,12 +33,7 @@
     <input type="button" class="memory" id="memory-clear" value="MC"></input>
     <input type="button" class="memory" id="memory-add" value="M+"></input>
     <input type="button" class="memory" id="memory-recall" value="MR"></input>
-    
     </div>
-    
-    <hr>
-    <div id="test-one"></div>
-    <div id="test-two"></div>
 </div>
 </div>
 </body>
