--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <link rel="stylesheet" href="index.css"/>
     <head id="head">
-    <title></title>
+    <title>Emeka's Calculator App</title>
+    </head>
 
 <body>
     <div class="container-root">
